second, upto about

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
         <div class="container">
             <div class="image">
                 <img src="./assets/images/conclave.png" id="conclave" alt="">
-                <img src="./assets/images/vr.png" id="vr" alt="">
             </div>
             <div class="content">
                 <h1 class="main-title">Conclave</h1>
@@ -34,6 +33,17 @@
             </div>
         </div>
     </section>
-    <section id="about" style="background-color: red;"> bla</section>
+    <section id="about"> 
+        <div class="container">
+            <div class="contents">
+                <h1 class="main-title">About</h1>
+                <p> adipisicing elit. Impedit esse nesciunt tempore, mollitia itaque quae officia debitis odit reprehenderit beatae consequuntur, culpa modi perferendis. Exercitationem eius laboriosam quis ullam, voluptatem dolore recusandae, at ab vitae laudantium excepturi reprehenderit quae, itaque amet quas corrupti debitis alias quibusdam obcaecati velit. Quasi, labore?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur quis cum est molestiae minima. Ut delectus repellendus corrupti illum repudiandae voluptates molestias nulla beatae, ipsa sequi ducimus rerum saepe distinctio.</p>
+            </div>
+            <div class="image">
+                <img src="./assets/images/eye.jpg" alt="">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
